# nidhogg

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
doc/: entitycomponentsystem.md
src/: CMakeLists.txt
src/nidApp/: CMakeLists.txt  application.hpp
src/nidECS/: CMakeLists.txt  component.hpp  entity.hpp  entitymanager.hpp  system.hpp
src/nidIO/: CMakeLists.txt  GLFWwindow.hpp  SDLwindow.cpp  SDLwindow.hpp  window.cpp  window.hpp
src/nidUtils/: CMakeLists.txt
src/nidUtils/profiling/: timing.hpp
src/nidVK/: CMakeLists.txt  extension.hpp  instance.cpp  instance.hpp  physicaldevice.cpp  physicaldevice.hpp
test/: CMakeLists.txt
test/nidECSTest/: CMakeLists.txt
